Main conten section complate

--- a/index.html
+++ b/index.html
@@ -28,5 +28,17 @@
             </div>
         </div>
     </header>
+
+    <main class="main-content">
+        <div class="container">
+            <section class="products-section">
+                <h2 class="section-title">Our Products</h2>
+                <div class="products-grid" id="products-grid">
+                    <!-- Products will be loaded dynamically -->
+                </div>
+            </section>
+        </div>
+    </main>
+
 </body>
 </html>
