--- a/index.html
+++ b/index.html
@@ -40,5 +40,26 @@
         </div>
     </main>
 
+    <!-- Cart Sidebar -->
+    <div class="cart-overlay"></div>
+    <div class="cart-sidebar">
+        <div class="cart-header">
+            <h3>Your Cart</h3>
+            <button class="close-cart">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+        <div class="cart-items" id="cart-items">
+            <!-- Cart items will be loaded dynamically -->
+        </div>
+        <div class="cart-footer">
+            <div class="cart-total">
+                <h4>Total: <span id="cart-total">$0.00</span></h4>
+            </div>
+            <button class="checkout-btn">Proceed to Checkout</button>
+            <button class="clear-cart">Clear Cart</button>
+        </div>
+    </div>
+
 </body>
 </html>
