notifection section complate

--- a/index.html
+++ b/index.html
@@ -61,5 +61,10 @@
         </div>
     </div>
 
+    <!-- Notification -->
+    <div class="toast-notification" id="toast-notification">
+        <span class="toast-message"></span>
+    </div>
+
 </body>
 </html>
