footer section complate

--- a/index.html
+++ b/index.html
@@ -66,5 +66,13 @@
         <span class="toast-message"></span>
     </div>
 
+    <!-- footer  -->
+    <footer class="copyright-footer minimal">
+        <div class="container">
+            <p>&copy; <span id="current-year"></span>Amdad Islam Eshan</p>
+        </div>
+    </footer>
+
+
 </body>
 </html>
